added portfolio history alpaca api route
