# app/alpaca/models/index.ts
@@ -51,6 +51,7 @@ export * from "./ObjectSerializer"
 export * from "./OrderObject"
 export * from "./PatchOrder"
 export * from "./Position"
+export * from "./PortfolioHistory"
 export * from "./TradeActivity"
 export * from "./TradeActivityAllOf"
 export * from "./TransferData"
