# app/alpaca/types/PromiseAPI.ts
@@ -23,6 +23,10 @@ import {
 } from "../apis/JournalsApi"
 import { OAuthApiRequestFactory, OAuthApiResponseProcessor } from "../apis/OAuthApi"
 import {
+  PortfolioApiRequestFactory,
+  PortfolioApiResponseProcessor,
+} from "../apis/PortfolioApi"
+import {
   TradingApiRequestFactory,
   TradingApiResponseProcessor,
 } from "../apis/TradingApi"
@@ -39,13 +43,11 @@ import { BankData } from "../models/BankData"
 import { BankResource } from "../models/BankResource"
 import { BatchJournalRequest } from "../models/BatchJournalRequest"
 import { BatchJournalResponse } from "../models/BatchJournalResponse"
+import { ClockResponse } from "../models/ClockResponse"
 import { CreateOrder } from "../models/CreateOrder"
 import { DocumentUpload } from "../models/DocumentUpload"
 import { InlineObject } from "../models/InlineObject"
 import { InlineObject1 } from "../models/InlineObject1"
-import { TradingAccount } from "../models/TradingAccount"
-import { MarketDay } from "../models/MarketDay"
-import { ClockResponse } from "../models/ClockResponse"
 import { InlineResponse2003 } from "../models/InlineResponse2003"
 import { InlineResponse2004 } from "../models/InlineResponse2004"
 import { InlineResponse2005 } from "../models/InlineResponse2005"
@@ -55,9 +57,12 @@ import { InlineResponse2008 } from "../models/InlineResponse2008"
 import { InlineResponse207 } from "../models/InlineResponse207"
 import { JournalData } from "../models/JournalData"
 import { JournalResource } from "../models/JournalResource"
+import { MarketDay } from "../models/MarketDay"
 import { OrderObject } from "../models/OrderObject"
 import { PatchOrder } from "../models/PatchOrder"
+import { PortfolioHistory } from "../models/PortfolioHistory"
 import { Position } from "../models/Position"
+import { TradingAccount } from "../models/TradingAccount"
 import { TransferData } from "../models/TransferData"
 import { TransferResource } from "../models/TransferResource"
 import {
@@ -70,6 +75,7 @@ import {
   ObservableFundingApi,
   ObservableJournalsApi,
   ObservableOAuthApi,
+  ObservablePortfolioApi,
   ObservableTradingApi,
 } from "./ObservableAPI"
 
@@ -982,6 +988,61 @@ export class PromiseOAuthApi {
   }
 }
 
+export class PromisePortfolioApi {
+  private api: ObservablePortfolioApi
+
+  public constructor(
+    configuration: Configuration,
+    requestFactory?: PortfolioApiRequestFactory,
+    responseProcessor?: PortfolioApiResponseProcessor
+  ) {
+    this.api = new ObservablePortfolioApi(
+      configuration,
+      requestFactory,
+      responseProcessor
+    )
+  }
+
+  /**
+   * Get timeseries data for equity and profit loss information of the account
+   * @param accountId Account identifier.
+   * @param period The duration of the data in number + unit, such as 1D
+   * @param timeframe The resolution of time window
+   * @param dateEnd The date the data is returned up to, in “YYYY-MM-DD” format. Defaults to the current market date (rolls over at the market open if extended_hours is false, otherwise at 7am ET)
+   * @param extendedHours If true, include extended hours in the result
+   */
+  public getPortfolioHistory(
+    accountId: string,
+    period?: string,
+    timeframe?: "1Min" | "5Min" | "15Min" | "1H" | "1D",
+    dateEnd?: string,
+    extendedHours?: boolean,
+    options?: Configuration
+  ): Promise<PortfolioHistory> {
+    const result = this.api.getPortfolioHistory(
+      accountId,
+      period,
+      timeframe,
+      dateEnd,
+      extendedHours,
+      options
+    )
+    return result.toPromise()
+  }
+
+  /**
+   * List open positions for an account
+   * @param accountId Account identifier.
+   */
+  public getPositions(
+    accountId: string,
+    options?: Configuration
+  ): Promise<Array<Position>> {
+    const result = this.api.getPositions(accountId, options)
+    return result.toPromise()
+  }
+}
+
 export class PromiseTradingApi {
   private api: ObservableTradingApi
 
@@ -1074,18 +1135,6 @@ export class PromiseTradingApi {
       symbols,
       options
     )
-    return result.toPromise()
-  }
-
-  /**
-   * List open positions for an account
-   * @param accountId Account identifier.
-   */
-  public getPositions(
-    accountId: string,
-    options?: Configuration
-  ): Promise<Array<Position>> {
-    const result = this.api.getPositions(accountId, options)
     return result.toPromise()
   }
 
